--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1437,7 +1437,8 @@
     "apikeys.delete.success.message": "The subscription has been successfully deleted",
     "apikeys.view.api": "View API",
     "apikeys.view.apikeys": "View APIkeys",
-    "subscription.create.at": "Subscription created on %s",
+    "subscription.for": "Subscription to",
+    "subscription.create.at": "created on %s",
     "subscription.nota.part.1": "Check out the documentation",
     "subscription.nota.part.2": "or explore",
     "subscription.nota.link.api": "to using the API",
@@ -1479,5 +1480,11 @@
     "Daikoku.home" : "Daikoku home",
     "API.list" : "APIs list",
     "more.nav.options": "More options",
-    "api.access.modal.title": "Api access request"
+    "api.access.modal.title": "Api access request",
+    "subscription.copy.basic.auth.label": "basic auth.",
+    "subscription.copy.basic.auth.help": "Copy credentials as basic auth. value",
+    "subscription.copy.apikey.label": "clientId:clientToken",
+    "subscription.copy.apikey.help": "Copy credentials as clientId:pclientSecret",
+    "subscription.copy.token.label": "token",
+    "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API"
 }
