add valid until date on apikey card

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -940,7 +940,7 @@
   "aggregation api keys security": "Autoriser l'agrégation de clés d'APIs",
   "aggregation api keys security for environment mode": "Autoriser l'agrégation de clés d'APIs pour le mode environnement",
   "aggregation_apikeys.security.help": "Active la possibilité d'utiliser une même clé d'API sur plusieurs plans.",
-  "aggregation_apikeys.environment.security.help" : "Active la possibilité d'utiliser une même clé d'API sur plusieurs plans ayant le même environnement.",
+  "aggregation_apikeys.environment.security.help": "Active la possibilité d'utiliser une même clé d'API sur plusieurs plans ayant le même environnement.",
   "aggregation.api_key.security.notification": "L'agrégation des clés API est une utilisation avancée. Gardez à l'esprit que les métadonnées et les quotas seront partagés entre chaque clé d'API parente et ses clés d'API agrégées. Daikoku n'appliquera aucun contrôle en cas de conflit de métadonnées.",
   "aggregation.environment.api_key.security.notification": "Même si la sécurité d'agrégation est activée, un contrôle est effectué pour vérifier les noms des plans d'utilisation lorsque vous étendez une souscription à une autre. Cela garantit que les clés API ne peuvent être agrégées que dans des environnements compatibles.",
   "disabled.due.to.aggregation.security": "désactivé en raison de l'activation de l'aggégation des clés",
@@ -1438,7 +1438,8 @@
   "apikeys.view.api": "Voir l'API",
   "apikeys.view.apikeys": "Voir les clés d'API",
   "subscription.for": "Souscription à",
-  "subscription.create.at": "crée le %s",
+  "subscription.created.at": "crée le %s",
+  "subscription.valid.until": "valid until %s",
   "subscription.nota.part.1": "Consultez la documentation",
   "subscription.nota.part.2": "ou explorez",
   "subscription.nota.link.api": "pour utiliser l'API",
@@ -1448,8 +1449,8 @@
   "subscription.successfully.enabled": "Votre souscription a été activée avec succès",
   "subscription.successfully.disabled": "Votre souscription a été désactivée avec succès",
   "subscription.custom.name.update.label": "Mettre à jour le nom perso.",
-  "subscription.custom.name.update.message":"Nom de la souscription",
-  "subscription.custom.name.update.placeholder":"Nom personnalisé",
+  "subscription.custom.name.update.message": "Nom de la souscription",
+  "subscription.custom.name.update.placeholder": "Nom personnalisé",
   "subscription.rotation.update.label": "Paramétrer la rotation",
   "subscription.reset.secret.label": "Réinit. le secret",
   "subscription.show.aggregate.label": "Voir l'agrégat",
@@ -1477,8 +1478,8 @@
   "login.required": "Connexion requise",
   "subscription.retrieve.login.required.message": "Veuillez vous connecter pour continuer. Vous devez être authentifié pour accéder à cette fonctionnalité.",
   "subscription.retrieve.token.unavalaible": "Le jeton n'est plus valable",
-  "Daikoku.home" : "Accueil Daikoku",
-  "API.list" : "Liste des APIs",
+  "Daikoku.home": "Accueil Daikoku",
+  "API.list": "Liste des APIs",
   "more.nav.options": "Plus d'options",
   "api.access.modal.title": "demande d'accès à une API",
   "subscription.copy.basic.auth.label": "Basic auth.",
