--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1438,7 +1438,8 @@
     "apikeys.view.api": "View API",
     "apikeys.view.apikeys": "View APIkeys",
     "subscription.for": "Subscription to",
-    "subscription.create.at": "created on %s",
+    "subscription.created.at": "created on %s",
+    "subscription.valid.until": "valid until %s",
     "subscription.nota.part.1": "Check out the documentation",
     "subscription.nota.part.2": "or explore",
     "subscription.nota.link.api": "to using the API",
@@ -1484,7 +1485,7 @@
     "subscription.copy.basic.auth.label": "basic auth.",
     "subscription.copy.basic.auth.help": "Copy credentials as basic auth. value",
     "subscription.copy.apikey.label": "clientId:clientToken",
-    "subscription.copy.apikey.help": "Copy credentials as clientId:pclientSecret",
+    "subscription.copy.apikey.help": "Copy credentials as clientId:clientSecret",
     "subscription.copy.token.label": "token",
     "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API"
 }
