--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -602,8 +602,8 @@
   "rotation.error.message": "Vous ne pouvez pas activer/désactiver la rotation automatique de la clé d'API car le plan force celle-ci.",
   "notif.apikey.rotation.inprogress": "Votre clé d'API avec le clientId %s a débuté sa rotation. Son clientSecret a été modifié.",
   "notif.apikey.rotation.ended": "Votre clé d'API avec le clientId %s a terminé sa rotation.",
-  "Rotation period": "Période de rotation",
-  "Grace period": "Période de tuilage",
+  "Rotation period": "Période de rotation (heures)",
+  "Grace period": "Période de tuilage (heures)",
   "help.apikey.rotation.period": "Période après laquelle le secret sera automatiquement modifié",
   "help.apikey.grace.period": "Période pendant laquelle le nouveau secret et l'ancien sont tous deux actifs (cette période est inclue dans la période de rotation).",
   "constraint.apikey.grace.period": "La période de tuilage doit être inferieur à la période de rotation",
@@ -1435,7 +1435,7 @@
   "apikeys.delete.success.message": "La souscription a été correctement supprimée",
   "apikeys.view.api": "Voir l'API",
   "apikeys.view.apikeys": "Voir les clés d'API",
-  "subscription.create.at": "Souscription crée le %s",
+  "subscription.create.at": "Souscription créée le %s",
   "subscription.nota.part.1": "Consultez la documentation",
   "subscription.nota.part.2": "ou explorez",
   "subscription.nota.link.api": "pour utiliser l'API",
@@ -1449,7 +1449,7 @@
   "subscription.custom.name.update.placeholder":"Nom personnalisé",
   "subscription.rotation.update.label": "Paramétrer la rotation",
   "subscription.reset.secret.label": "Réinit. le secret",
-  "subscription.show.agregate.label": "Voir l'agrégat",
+  "subscription.show.aggregate.label": "Voir l'agrégat",
   "subscription.transfer.label": "Transférer la souscription",
   "subscription.enable.button.label": "Activer la souscription",
   "subscription.disable.button.label": "Désactiver la souscription",
