--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1488,5 +1488,22 @@
     "subscription.copy.apikey.label": "clientId:clientToken",
     "subscription.copy.apikey.help": "Copy credentials as clientId:clientSecret",
     "subscription.copy.token.label": "token",
-    "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API"
+    "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API",
+    "api.home.config.api.aria.label": "Configuration",
+    "api.home.update.api.btn.label": "Update",
+    "api.home.clone.api.btn.label": "Clone",
+    "api.home.create.version.api.btn.label": "Create new version",
+    "api.home.transfer.api.btn.label": "Transfer",
+    "api.home.delete.api.btn.label": "Delete",
+    "api.home.update.description.btn.label": "Update description",
+    "api.home.update.api.form.title": "Update %s Api information",
+    "api.home.create.api.form.title": "Create new Api",
+    "api.home.transfer.api.form.title": "Transfer %s ownership",
+    "api.home.update.description.form.title": "Update Api description",
+    "api.home.update.plan.form.title": "Update usage plan information",
+    "api.home.create.plan.form.title": "Create new usage plan",
+    "api.home.create.plan.modal.title": "Create new usage plan",
+    "api.home.create.plan.modal.description": "Create a new usage plan from scratch or import an existing usage plan from another API version. You can then customize it as needed.",
+    "api.home.create.plan.modal.create.btn.label": "Create new usage plan",
+    "api.home.create.plan.modal.import.btn.label": "Import a existing usage plan"
 }
