emails customization have be moved to the CMS CLI

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -995,11 +995,9 @@
     "mailing_internalization.required_variables": "Required variables",
     "mailing_internalization.translation_updated": "Translation updated",
     "mailing_internalization.failed_translation_update": "Failed to save translation",
-    "mailing_internalization.mail_tab": "Mail",
-    "mailing_internalization.mail_template_tab": "Mail template",
+    "mailing_internalization.mail_tab": "Mail template",
     "mailing_internalization.front_office_tab": "Front office",
     "mailing_internalization.mail_description": "Manage the contents of all Daikoku emails",
-    "mailing_internalization.mail_template_description": "Manage the email template that wraps all emails",
     "mailing_internalization.front_office_description": "Configure translations for the front office",
     "mailing_internalization.action": "Manage",
     "mailing_internalization.go_to_edit_template": "Edit mail template",
