--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1488,5 +1488,30 @@
   "subscription.copy.apikey.label": "ClientId:ClientToken",
   "subscription.copy.apikey.help": "Copier les identifiants sous la forme clientId:clientSecret",
   "subscription.copy.token.label": "Jeton",
-  "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API"
+  "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API",
+  "api.home.config.api.aria.label": "Configuration",
+  "api.home.update.api.btn.label": "Éditer l'API",
+  "api.home.clone.api.btn.label": "Dupliquer l'API",
+  "api.home.create.version.api.btn.label": "Créer une nouvelle version",
+  "api.home.transfer.api.btn.label": "Transférer l'API",
+  "api.home.delete.api.btn.label": "Supprimer l'API",
+  "api.home.update.description.btn.label": "Éditer la description",
+  "api.home.update.api.form.title": "Éditer l'API - %s",
+  "api.home.create.api.form.title": "Créer une nouvelle API",
+  "api.home.transfer.api.form.title": "Transférer l'API %s ",
+  "api.home.update.description.form.title": "Éditer la description de l'API",
+  "api.home.update.plan.form.title": "Éditer le plan de souscription",
+  "api.home.create.plan.form.title": "Créer un nouveau plan de souscription",
+  "api.home.create.plan.modal.title": "Créer un nouveau plan de souscription",
+  "api.home.create.plan.modal.description": "Créez un plan d'utilisation à partir de zéro ou importez un plan d'utilisation existant à partir d'une autre version de l'API. Vous pourrez ensuite le personnaliser selon vos besoins.",
+  "api.home.create.plan.modal.create.btn.label": "Créer un nouveau plan de souscription",
+  "api.home.create.plan.modal.import.btn.label": "Importer un nouveau plan de souscription",
+  "usage.plan.form.quotas.selector.true.label": "Configurer les quotas",
+  "usage.plan.form.quotas.selector.true.description": "Configurez des quotas pour limiter le nombre d'appels.",
+  "usage.plan.form.quotas.selector.false.label": "Illimité",
+  "usage.plan.form.quotas.selector.false.description": "Les consommateurs peuvent effectuer un nombre illimité d'appels à l'API.",
+  "usage.plan.form.pricing.selector.true.label": "Avec frais",
+  "usage.plan.form.pricing.selector.true.description": "Définissez des tarifs pour accéder à l'API, avec des options avancées.",
+  "usage.plan.form.pricing.selector.false.label": "Gratuit",
+  "usage.plan.form.pricing.selector.false.description": "Les consommateurs accèdent à l'API sans frais."
 }
