--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -796,7 +796,7 @@
     "Income": "Income",
     "Edition": "Edition",
     "Custom header": "Custom header",
-    "api.custom.header.help": "Use {{title}} to insert API title, {{ description }} to insert API small description. Add \"btn-edit\" class to link to admin API edition admin page",
+    "api.custom.header.help": "Define a custom HTML API header.Use {{title}} to insert API title, {{ description }} to insert API small description",
     "get.apikey.requires.login": "Get an API key requires you to be logged in",
     "consume.apikey": "Consume an API",
     "Mongo migration": "MongoDB to Postgres migration",
@@ -933,7 +933,7 @@
     "Authorized entities": "Authorized entities",
     "Authorized.entities.placeholder": "Select Otoroshi service groups, services and/or routes",
     "teamapi.new_version": "New version",
-    "authorized.entities.help": "Select Otoroshi service groups and/or services on which the key is authorized",
+    "authorized.entities.help": "Select Otoroshi service groups, services and/or routes on which the API key is authorized",
     "apikey_select_modal.title": "Get an API key",
     "apikey_select_modal.select_your_api_key": "Select your API key to extend",
     "team_apikey_for_api.show_aggregate_sub": "Show aggregate subscriptions",
@@ -1450,8 +1450,8 @@
     "subscription.successfully.enabled": "Your subscription has been successfully enabled",
     "subscription.successfully.disabled": "Your subscription has been successfully disabled",
     "subscription.custom.name.update.label": "Update custom subscription name",
-    "subscription.custom.name.update.message":"Subscription name",
-    "subscription.custom.name.update.placeholder":"Custom name",
+    "subscription.custom.name.update.message": "Subscription name",
+    "subscription.custom.name.update.placeholder": "Custom name",
     "subscription.rotation.update.label": "Setup secret rotation",
     "subscription.reset.secret.label": "Reset secret",
     "subscription.show.aggregate.label": "Show aggregate",
@@ -1479,8 +1479,8 @@
     "login.required": "Login required",
     "subscription.retrieve.login.required.message": "Please log in to continue. You need to be authenticated to access this feature.",
     "subscription.retrieve.token.unavalaible": "token unavailable",
-    "Daikoku.home" : "Daikoku home",
-    "API.list" : "APIs list",
+    "Daikoku.home": "Daikoku home",
+    "API.list": "APIs list",
     "more.nav.options": "More options",
     "api.access.modal.title": "Api access request",
     "subscription.copy.basic.auth.label": "basic auth.",
@@ -1490,13 +1490,12 @@
     "subscription.copy.token.label": "token",
     "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API",
     "api.home.config.api.aria.label": "Configuration",
-    "api.home.update.api.btn.label": "Edit Api configuration",
-    "api.home.clone.api.btn.label": "Duplicate Api configuration",
+    "api.home.update.api.btn.label": "Edit",
+    "api.home.clone.api.btn.label": "Duplicate",
     "api.home.create.version.api.btn.label": "Create new version",
     "api.home.transfer.api.btn.label": "Transfer",
     "api.home.delete.api.btn.label": "Delete",
     "api.home.update.description.btn.label": "Update description",
-    "api.home.update.api.form.title": "Update %s Api information",
     "api.home.create.api.form.title": "Create new Api",
     "api.home.transfer.api.form.title": "Transfer %s ownership",
     "api.home.update.description.form.title": "Update Api description",
@@ -1513,5 +1512,28 @@
     "usage.plan.form.pricing.selector.true.label": "With fees",
     "usage.plan.form.pricing.selector.true.description": "Set prices to access the API, with advanced options.",
     "usage.plan.form.pricing.selector.false.label": "Free",
-    "usage.plan.form.pricing.selector.false.description": "Consumers access the API free of charge."
+    "usage.plan.form.pricing.selector.false.description": "Consumers access the API free of charge.",
+    "usage.plan.form.quotas.flow.label": "Quotas configuration",
+    "usage.plan.form.billing.flow.label": "Pricing configuration",
+    "usage.plan.form.customization.flow.label": "API keys configuration",
+    "usage.plan.form.description.help": "A brief presentation of the plan, visible to users.",
+    "usage.plan.form.authorized.teams.help": "the visibility of the plan is set to private. Specify the teams authorized to access in addition to the admin team.",
+    "usage.plan.form.max.request.second.label": "Max requests per second",
+    "usage.plan.form.max.request.second.help": "Sets the maximum number of requests per second allowed for the generated API key (can be adjusted later).",
+    "usage.plan.form.max.request.day.label": "Max requests per day",
+    "usage.plan.form.max.request.day.help": "Sets the maximum number of requests per day allowed for the generated API key (can be adjusted later).",
+    "usage.plan.form.max.request.month.label": "Max requests per month",
+    "usage.plan.form.max.request.month.help": "Sets the maximum number of requests per month allowed for the generated API key (can be adjusted later).",
+    "usage.plan.form.max.request.placeholder": "Enter a positive integer",
+    "usage.plan.form.third.party.payment.help": "Choose an available third party payment provider, or use Daikoku's APIs to retrieve billing information if none is selected.",
+    "usage.plan.form.cost.per.period.help": "Set the subscription cost for the selected billing period.",
+    "usage.plan.form.cost.per.request.help": "Set the cost per request, to charge beyond the quotas or directly per use.",
+    "usage.plan.form.trial.period.help": "Set the trial period during which the customer will not be charged.",
+    "usage.plan.form.payment.settings.label": "Third-party payment provider",
+    "usage.plan.form.payment.settings.id.label": "Target",
+    "update.api.details.panel.title": "API details",
+    "update.api.description.successful.toast.label": "Description has been succesfully updated",
+    "api.form.header.flow.label": "Header",
+    "api.form.cms.header.label": "Custom API header from CMS page",
+    "api.form.cms.header.help": "Define a custom API header by using a CMS page."
 }
