--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1490,13 +1490,12 @@
   "subscription.copy.token.label": "Jeton",
   "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API",
   "api.home.config.api.aria.label": "Configuration",
-  "api.home.update.api.btn.label": "Éditer l'API",
-  "api.home.clone.api.btn.label": "Dupliquer l'API",
+  "api.home.update.api.btn.label": "Éditer",
+  "api.home.clone.api.btn.label": "Dupliquer",
   "api.home.create.version.api.btn.label": "Créer une nouvelle version",
-  "api.home.transfer.api.btn.label": "Transférer l'API",
-  "api.home.delete.api.btn.label": "Supprimer l'API",
+  "api.home.transfer.api.btn.label": "Transférer",
+  "api.home.delete.api.btn.label": "Supprimer",
   "api.home.update.description.btn.label": "Éditer la description",
-  "api.home.update.api.form.title": "Éditer l'API - %s",
   "api.home.create.api.form.title": "Créer une nouvelle API",
   "api.home.transfer.api.form.title": "Transférer l'API %s ",
   "api.home.update.description.form.title": "Éditer la description de l'API",
@@ -1513,5 +1512,28 @@
   "usage.plan.form.pricing.selector.true.label": "Avec frais",
   "usage.plan.form.pricing.selector.true.description": "Définissez des tarifs pour accéder à l'API, avec des options avancées.",
   "usage.plan.form.pricing.selector.false.label": "Gratuit",
-  "usage.plan.form.pricing.selector.false.description": "Les consommateurs accèdent à l'API sans frais."
+  "usage.plan.form.pricing.selector.false.description": "Les consommateurs accèdent à l'API sans frais.",
+  "usage.plan.form.quotas.flow.label": "Configuration des quotas",
+  "usage.plan.form.billing.flow.label": "Configuration des tarifs",
+  "usage.plan.form.customization.flow.label": "Configuration des clés API",
+  "usage.plan.form.description.help": "Une brève présentation du plan, visible par les utilisateurs.",
+  "usage.plan.form.authorized.teams.help": "La visibilité du plan est définie sur privée. Précisez les équipes autorisées à y accéder, en plus de l'équipe administratrice.",
+  "usage.plan.form.max.request.second.label": "Max requêtes par seconde",
+  "usage.plan.form.max.request.second.help": "Définit le nombre maximal de requêtes par seconde autorisées pour la clé API générée (peut être ajusté ultérieurement).",
+  "usage.plan.form.max.request.day.label": "Max requêtes par jour",
+  "usage.plan.form.max.request.day.help": "Définit le nombre maximal de requêtes par jour autorisées pour la clé API générée (peut être ajusté ultérieurement).",
+  "usage.plan.form.max.request.month.label": "Max requêtes par mois",
+  "usage.plan.form.max.request.month.help": "Définit le nombre maximal de requêtes par mois autorisées pour la clé API générée (peut être ajusté ultérieurement).",
+  "usage.plan.form.max.request.placeholder": "Entrez un entier positif",
+  "usage.plan.form.third.party.payment.help": "Choisissez un fournisseur de paiement tiers disponible, ou utilisez les APIs de Daikoku pour récupérer les informations de facturation si aucun n'est sélectionné.",
+  "usage.plan.form.cost.per.period.help": "Définissez le coût de l'abonnement pour la période de facturation sélectionnée.",
+  "usage.plan.form.cost.per.request.help": "Définissez le coût par requête, pour facturer au-delà des quotas ou directement par utilisation.",
+  "usage.plan.form.trial.period.help": "Définissez la période d'essai pendant laquelle le client ne sera pas facturé.",
+  "usage.plan.form.payment.settings.label": "Fournisseur de paiement tiers",
+  "usage.plan.form.payment.settings.id.label": "Cible",
+  "update.api.details.panel.title": "Details de l'API",
+  "update.api.description.successful.toast.label": "La description a été modifée avec succès.",
+  "api.form.header.flow.label": "Entête",
+  "api.form.cms.header.label": "En-tête d'API personnalisé à partir de la page CMS",
+  "api.form.cms.header.help": "Définissez un en-tête d'API personnalisé à l'aide d'une page CMS."
 }
